mis à jour du projet dans la branche

--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style-index.css">
-  <title>Accueil</title>
-</head>
-
-<body>
-  <nav class="sidebar">
-    <ul>
-      <li><a href="index.html">ACCUEIL</a></li>
-      <li><a href="semaine-type.html">SEMAINE TYPE</a></li>
-      <li><a href="bien_se_preparer.html">BIEN SE PREPARER</a></li>
-      <li><a href="cursus.html">CURSUS</a></li>
-      <li><a href="contact.html">CONTACT</a></li>
-      <a href="https://www.wildcodeschool.com/fr-FR"><img src="images/logo_wcs.png" alt="LogoWild" id="logo" /></a>
-      </li>
-    </ul>
-  </nav>
-  <div class="container-main">
-    <div class="banniere">
-      <img src="images/image_banniere.png" alt="Bannière" id="banniere-img" />
-    </div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="pagePrototype.css" />
+        <link rel="stylesheet" href="style-index.css" />
+        <title>Accueil</title>
+        <nav class="sidebar">
+            <ul>
+                <li><a href="index.html">ACCUEIL</a></li>
+                <li><a href="semaine-type.html">SEMAINE TYPE</a></li>
+                <li><a href="bien_se_preparer.html">BIEN SE PREPARER</a></li>
+                <li><a href="cursus.html">CURSUS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+                <a href="https://www.wildcodeschool.com/fr-FR"><img src="images/logo_wcs.png" alt="LogoWild"
+                        id="logo" /></a>
+                </li>
+            </ul>
+        </nav>
+    </head>
+    <div class="container-main">
+        <div class="banniere">
+            <img src="images/image_banniere.png" alt="Bannière" id="banniere-img" />
+        </div>
 
     <div class="main-title">
 
       <h1 class="h1index">WELCOME</h1>
-      <h1 class="h1-second-index">REJOINS NOUS</h1>
+      <h1> <a href="https://www.wildcodeschool.com/fr-FR" target="_blank" class="h1-second-index"> REJOINS NOUS</a></h1>
 
     </div>
     <section class="index-section-articles">
@@ -38,17 +37,21 @@
         <img src="images/image_quisommesnous.jpg" class="image-remote">
         <h2 class="h2index"> Qui sommes nous ?</h2>
         <p class="text-index">
-          Nous sommes quatre étudiants en formation </br> Developpeur Web et Web Mobile à la wildcodeschool.</br>
+          Nous sommes quatre étudiants en formation </br> Developpeur Web et Web Mobile à la wildcodeschool </br> en JAVASCRIPT.</br>
           Notre team est composée de profils très différents mais tout aussi complémentaires. </br> </br>
           Kevin vient d'Amiens et est
           diplomé d'une licence en Banque et Assurance. Il a travaillé dans le domaine </br> de la banque pendant 8 ans.
           </br></br>
-          Fatima, elle, est Lilloise. Elle est diplomée d'une licence en Management et a
-          travaillé pendant plusieurs années dans le domaine du réseau et des télécommunications. </br> </br> (giovanni
-          </br> </br> + thomas)
-          </br></br>
-          Que ce soit dans le cadre d'une reconversion professionnelle ou bien d'une continuité d'études, nous avons
-          tous les quatres fait le choix d'intégrer l'école de la WILDCODESCHOOL.
+          Giovanni, quant à lui, vient de l'Ariège. Il a travaillé en tant que paysagiste durant de nombreuses années.
+        </br> </br> 
+          Fatima, elle, est Lilloise. Elle est diplomée d'une licence de Management et a
+          travaillé pendant plusieurs années dans le domaine des réseaux et des télécommunications. 
+          </br></br> 
+          Notre team est également composée de Thomas. Il poursuit ses études dans le numérique après avoir fait une formation en C#.
+          
+        </br> </br> 
+        Que ce soit dans le cadre d'une reconversion professionnelle ou bien d'une continuité d'études, nous avons
+          tous les quatres fait le choix d'intégrer l'école de la WILDCODESCHOOL. 
         </p>
       </article>
 
@@ -57,17 +60,17 @@
         <h2 class="h2index">Pourquoi rejoindre la wildcodeschool ?</h2>
         <p class="text-index">
           La WILDCODESCHOOL c'est : <br /><br />
-          - plus de 2000 anciens élèves,<br /><br />
+          - plus de 2000 anciens élèves<br /><br />
           - 3 spécialités (développement web, analyse de la data, cybersécurité)<br /><br />
-          - + 20 campus en Europe<br /><br />
+          - + de 20 campus en Europe<br /><br />
           - un taux de 84% d’insertion professionnelle.<br />
           <br /><br />
           À la WILDCODESCHOOL, tu te retrouveras d'abord face aux problèmes et on t'expliquera ensuite la solution. Un
           peu comme une sorte d'escape Game éducatif, pas mal non ? <br /><br />
           L'objectif est de te familiariser rapidement avec le langage choisi et de trouver par toi même la solution au
           problème. La montée en compétence se fera au gré des quêtes.<br /><br />
-          Les cours sont interactifs. Live codding et workshop te permettront de découvrir pas à pas le langage et
-          d'apprendre en pratiquant.
+          Les cours sont interactifs. live codding et workshop te permettront d'apprendre en pratiquant et
+         de découvrir pas à pas le langage choisi.
 
 
 
@@ -76,9 +79,9 @@
 
       <article class="remote">
         <img src="images/image_remote.jpg" class="image-remote">
-        <h2 class="h2index">Apprendre à développer en remote, c'est possible ?</h2>
+        <h2 class="h2index">Apprendre à développer en remote</h2>
         <p class="text-index">
-          La réponse est OUI.
+          Est-ce possible ? La réponse est OUI.
           </br></br> Pour cette rentrée, notre promotion est constituée de 60 élèves venus de toute la France et meme
           d'ailleurs. </br>Londres, Bruxelles et même Madagascar ont rejoint la session de Developpeur Web et Web Mobile
           en remote.
@@ -95,73 +98,63 @@
       </article>
 
     </section>
-
-    <footer>
-
-
-      <div class="container-footer">
+  </body>
+  <footer>
+    <div class="container-footer">
         <div class="wilder-reseaux">
-          <a href="https://aitkhelifa.fatima59@gmail.com">
-            <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
-          <a href="https://github.com/fatimaatk">
-            <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
-          <a href="https://www.linkedin.com/in/fatima-ait-khelifa-4ab840215/">
-            <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
-          <h4>FATIMA AIT KHELIFA </h4>
-
+            <div class="wilder-reseaux-container-icones">
+                    <a href="https://aitkhelifa.fatima59@gmail.com" target="_blank">
+                        <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
+                    <a href="https://github.com/fatimaatk" target="_blank">
+                        <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
+                    <a href="https://www.linkedin.com/in/fatima-ait-khelifa-4ab840215/" target="_blank">
+                        <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
+            </div>
+            <h4>FATIMA AIT KHELIFA</h4>
         </div>
         <div class="wilder-reseaux">
-
-          <!--
-                  <img src="icones/gio-img.png" alt="Photo de giovanni" class="icone"/>
-                 -->
-          <a href="https://giovanni.rossi.web@gmail.com">
-            <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
-          <a href="https://github.com/eths09">
-            <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
-          <a href="https://www.linkedin.com/in/">
-            <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
-          <h4> GIOVANNI ROSSI </h4>
-
-
+            <div class="wilder-reseaux-container-icones">
+                    <a href="https://kevinbruno90@gmail.com" target="_blank">
+                        <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
+                    <a href="https://github.com/KvnBrn" target="_blank">
+                        <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
+                    <a href="https://www.linkedin.com/in/kevin-bruno-983a6417b/" target="_blank">
+                        <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
+            </div>            
+            <h4>KEVIN BRUNO</h4>
         </div>
         <div class="wilder-reseaux">
-
-          <!--
-                  <img src="icones/thomas-img.png" alt="Photo de Thomas" class="icone"/>
-                -->
-          <a href="https://thomasfran1935@gmail.com">
-            <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
-          <a href="https://github.com/ThomasFr45">
-            <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
-          <a href="https://www.linkedin.com/in/">
-            <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
-          <h4>THOMAS FRANÇOIS</h4>
-
+            <div class="wilder-reseaux-container-icones">
+                    <a href="https://thomasfran1935@gmail.com" target="_blank">
+                        <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
+                    <a href="https://github.com/ThomasFr45" target="_blank">
+                        <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
+                    <a href="https://www.linkedin.com/in/thomas-fran%C3%A7ois-bba91a221/" target="_blank">
+                        <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
+            </div>
+            <h4>THOMAS FRANÇOIS</h4>
         </div>
         <div class="wilder-reseaux">
-
-          <!--
-            <img src="icones/kevin-img.png" alt="Photo de Kévin" class="icone" />
-            -->
-          <a href="https://kevinbruno90@gmail.com">
-            <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
-          <a href="https://https://github.com/KvnBrn">
-            <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
-          <a href="https://www.linkedin.com/in/kevin-bruno-983a6417b/">
-            <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
-          <h4>KEVIN BRUNO</h4>
-
-        </div>
-      </div>
-      <div class="texte-footer">
-        <p>Wilders ayant participé à l'élaboration de ce projet
-          </br></br>
-          Site internet crée dans le cadre d'un projet de la formation DEVELOPPEUR WEB et WEB MOBILE.
-          </br> </br>Tous droits réservés à la WILDCODESCHOOL.
+            <div class="wilder-reseaux-container-icones">
+                    <a href="https://giovanni.rossi.web@gmail.com" target="_blank">
+                        <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
+                    <a href="https://github.com/eths09" target="_blank">
+                        <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
+                     <a href="https://www.linkedin.com/in/gio-rossi-4b0b98221/" target="_blank">
+                        <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
+            </div>
+            <h4>GIOVANNI ROSSI</h4>
+         </div>
+    </div>
+    <div class="text-footer">
+        <p>Wilders ayant participé à l'élaboration de ce projet.
+        </br> </br>
+            Site internet créé dans le cadre d'un projet de la formation DEVELOPPEUR WEB et WEB MOBILE promo
+            2021-2022.
+            </br>
+            Tous droits réservés à la WildCodeSchool.
         </p>
-      </div>
-    </footer>
-  </div>
-
+    </div>
+</div>
+</footer>
 </html>
