--- a/bien_se_preparer.html
+++ b/bien_se_preparer.html
@@ -13,30 +13,30 @@
       <div class="cadreli">
         <img src="./img/imgTypeDeMachines.png" class="imgLeft">
         <li>types de machines</li>
-        <p>Avant de commencer à cuisiner il est important d'avoir les bons ustensiles, que vous soyez sur Mac ou sur Pc ce qui compte le plus pour un départ idéal c'est le système d'exploitation. On vous conseille donc fortement d'installer Ubuntu avant la formation et de vous habituer à l'interface. voici un lien qui vous aidera à passer votre ordinateur sous Ubuntu <br/> <a href="https://www.numetopia.fr/comment-creer-une-cle-usb-bootable-sous-ubuntu/">je veut passer sous ubuntu</a> </p>
+        <p>Avant de commencer à cuisiner, il est important d'avoir les bons ustensiles.<br/> Que vous soyez sur Mac ou sur Pc, ce qui compte le plus pour un départ idéal<br/> c'est le système d'exploitation. On vous conseille donc fortement d'installer Ubuntu avant la formation,<br/> et de vous habituer à l'interface. Voici un lien qui vous aidera à passer votre ordinateur sous Ubuntu <br/> <a href="https://www.numetopia.fr/comment-creer-une-cle-usb-bootable-sous-ubuntu/">je veux passer sous ubuntu</a> </p>
       </div>
       <div class="cadreli" >
         <img src="./img/people.png" class="imgRight">
         <li>Installations</li>
-        <p>Ensuite de bons ingrédients <br/> -visual studio code <br/> <br/> et comme c'est plus amusants de cuisiner à plusieurs <br/> - Discord- <br/> -Slack- <br/> -Google Meet-
+        <p>Tout d'abord de bons ingrédients : <br/> <br/> -visual studio code <br/> <br/> et comme c'est plus amusant de cuisiner à plusieurs : <br/> <br/>- Discord- <br/> -Slack- <br/> -Google Meet-
       </div>
       <div class="cadreli" >
         <img src="./img/recette.png" class="imgLeft">
         <lI>Quêtes de préparation</lI>
-        <p> vous voulez être sûr que le métier vous plaît et apprendre quelques recettes de base avant de faire le grand saut . Alors la wild a mis en place un programme spécialement pour vous => <a href="https://www.wildcodeschool.com/fr-FR/formations/formation-developpeur-web-gratuit"> on essaye : D </a></p>
+        <p> Vous voulez être sûr que le métier vous plaît et apprendre quelques recettes de base avant de faire le grand saut . Alors la Wild a mis en place un programme spécialement pour vous => <a href="https://www.wildcodeschool.com/fr-FR/formations/formation-developpeur-web-gratuit"> on essaye : D </a></p>
       </div>
       <div class="cadreli">
         <img src="./img/code.png" class="imgRight">
         <li>Savoir faire</li>
-        <p> en commun tous les apprentis cuisinier utilisent html et css et ensuite choisisse d'utiliser PHP où Javascript <br/>
-            je vous rassure que vous ayez choisi l'un ou l'autre vous serez capable de préparer de super plats à la fin de la formation,<br/>
-            on vous conseille donc de vous renseigner à l'avance pour avoir une idée de ce qui vous plaît le plus<br/>
-            mais dans tous les cas vous pourrez rapidement vous essayer aux deux languages au début de la formation.</p>
+        <p> Tous les apprentis cuisiniers utilisent html et css en commun.<br/> Par la suite ils choisissent d'utiliser PHP ou Javascript <br/>
+            Je vous rassure, que vous ayez choisi l'un ou l'autre, vous serez capable de préparer de super plats.<br/>
+            On vous conseille donc de vous renseigner à l'avance pour avoir une idée de ce qu'il vous plaît le plus.<br/>
+            Vous pourrez rapidement essayer les deux languages au début de la formation.</p>
       </div>
       <div class="cadreli">
-        <img src="./img/goodVibes.png" class="goodVibes" > 
+        <img src="./img/goodVibes.png" class="imgsavoiretre" id="goodVibes" > 
         <li>Savoir être</li>
-          <p>Les soft skills sont l'ensemble des aptitudes et compétences qui ne sont pas techniques et qui nous permettent d'évoluer dans la vie, personnelle comme professionnelle. <br/> <br/> -les traits de personnalités, innés (introversion, extraversion, optimisme...)<br/>
+          <p>Les "soft skills" sont l'ensemble des aptitudes et compétences qui ne sont pas techniques et qui nous permettent d'évoluer dans la vie, personnelle comme professionnelle. <br/> <br/> -les traits de personnalités, innés (introversion, extraversion, optimisme...)<br/>
              -les états émotionnels (enthousiasme, conscience de soi, empathie...)<br/>
              -les compétences qu'on peut acquérir et améliorer (sens de la communication, élocution, sens de l'écoute, esprit d'équipe...).
           </p>
