--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
              <img src="images/image_banniere.png" alt="Bannière" id="banniere-img" />
          </div>
          <div class="main-title">
-             <h1>Bienvenue à la wild</h1>
+            <h1 class="h1index">WELCOME</h1>
+            <h1> <a href="https://www.wildcodeschool.com/fr-FR" target="_blank" class="h1-second-index"> REJOINS NOUS</a></h1>
          </div>
          <body>
              <div class="container-main-body">
@@ -38,9 +39,11 @@
                             Kevin vient d'Amiens et est
                             diplomé d'une licence en Banque et Assurance. Il a travaillé dans le domaine </br> de la banque pendant 8 ans.
                             </br></br>
+                            Giovanni, quant à lui, vient de l'Ariège. Il a travaillé en tant que paysagiste durant de nombreuses années.
+                            <br/><br/>
                             Fatima, elle, est Lilloise. Elle est diplomée d'une licence en Management et a
-                            travaillé pendant plusieurs années dans le domaine du réseau et des télécommunications. </br> </br> (giovanni
-                            </br> </br> + thomas)
+                            travaillé pendant plusieurs années dans le domaine du réseau et des télécommunications.
+                            </br></br>Notre team est également composée de Thomas. Il poursuit ses études dans le numérique après avoir fait une formation en C.
                             </br></br>
                             Que ce soit dans le cadre d'une reconversion professionnelle ou bien d'une continuité d'études, nous avons
                             tous les quatres fait le choix d'intégrer l'école de la WILDCODESCHOOL.</p></div>
