--- a/semaine-type.html
+++ b/semaine-type.html
@@ -25,13 +25,13 @@
         <img src="images/image_banniere.png" alt="Bannière" id="banniere-img" />
     </div>
     <div class="main-title">
-        <h1>Semaine Type à la Wild</h1>
+        <h1>Une Semaine à la &#123;<span style="color:#f76f6f">Wild</span>[Remote]&#125;</h1>
     </div>
 
     <body>
         <div class="container-main-body">
             <section class="container-section-intro">
-                <img src="images/semaine-type-wild.png" alt="Une semaine type à la Wild" id="semaine-type-img" />
+                <img src="images/semaine-type.png" alt="Une semaine type à la Wild" id="semaine-type-img" />
                 <article class="intro-semaine-type">
                     Voici une semaine type à la wild où nous avons plusieurs thèmes abordés.
                     Nous allons passer en revu ces derniers plus bas...</br> Suivez le guide !
@@ -41,22 +41,26 @@
                 <section class="container-section-articles">
                     <div class="second-title">🙋‍♀️<h2>Stand up</h2>🙋‍♀️</div>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nobis cum culpa dolorum
-                        excepturi?
-                        Odit voluptate itaque quia maiores, illo, aliquam quo explicabo assumenda dolor necessitatibus
-                        voluptates, quam officia deserunt?
+                        Chaque début de semaine, et même chaque début de journée commence par le Stand-up. Mais
+                        qu'est-ce que le stand-up? C'est une courte présentation (pas plus de 2min) qui nous aide à
+                        échanger et à connaître les humeurs de chacun, ce qu'il a fait la journée d'avant et ce qu'il
+                        prévoit de faire jusqu'à la fin de journée.</br>
+                        Un peu comme lorsqu'on croise un collègue le matin et qu'on échange brièvement. On renforce 
+                        nos liens et c'est important!
                     </article>
                     <div class="second-title">🔁<h2>Rétrospective</h2>🔁</div>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ullam expedita quam aspernatur
-                        odio, at perferendis illo quae distinctio fuga ea reiciendis officiis minus aperiam incidunt
-                        saepe sed. Eum, ad!
+                        La Rétro, à l'inverse du Stand-up, à lieu l'après midi du dernier jour car elle fait le bilan 
+                        complet de la semaine passée.</br>
+                        On y prend un peu plus de temps, et chacun évoque ce qui lui a plus ou moins plu et ce qui 
+                        s'est plus ou moins bien passé. C'est important d'échanger sur nos difficultés pour ne pas s'isoler 
+                        mais c'est tout aussi important de parler de nos réussites!
                     </article>
                     <div class="second-title">❓<h2>Kahoot</h2>❓</div>
                     <article>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam earum obcaecati aut eaque
-                        natus ex, accusamus tempora saepe officia neque rem? Aspernatur rerum exercitationem quis error
-                        illo soluta cupiditate.
+                        Après le rétro et pour finir la semaine sur une petite touche détente, quoi de mieux qu'un Quiz ?! </br>
+                        C'est le principe du Kahoot qui va nous permettre de manière ludique de faire des révisions sur les 
+                        cours vues dans la semaine.
                     </article>
                 </section>
                 <img src="images/kahoot-img.png" class="section-img">
@@ -66,15 +70,19 @@
                 <section class="container-section-articles">
                     <div class="second-title">🔭<h2>Quêtes</h2>🔭</div>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nobis cum culpa dolorum
-                        excepturi? Odit voluptate itaque quia maiores, illo, aliquam quo explicabo assumenda dolor
-                        necessitatibus voluptates, quam officia deserunt?
+                        Aaah... les quêtes! C'est surement ce sur quoi vous allez passer le plus de temps au début de votre formation.</br>
+                        Alors oui c'est normal, il faut bien apprendre, mais vous allez apprendre d'abord à vous débrouiller seul pour assimiler 
+                        la méthode et ensuite viendront les détails pendant le cours/live coding.</br>
+                        Les quêtes sont bien faites et explicites.</br>
+                        Vous avez également des astuces des autres élèves (sur de la documentation par exemple).</br>
+                        Surtout faites bien vos quêtes AVANT les cours pour avoir les notions principales et ne pas être largué.
                     </article>
                     <div class="second-title">🚀<h2>Correction</h2>🚀</div>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ullam expedita quam aspernatur
-                        odio, at perferendis illo quae distinctio fuga ea reiciendis officiis minus aperiam incidunt
-                        saepe sed. Eum, ad!
+                        Une fois les quêtes terminées, vous avez des exercices pour vous entraîner. Ce sont les autres élèves qui vont les 
+                        corriger. C'est une très bonne méthode d'apprentissage car, si vous savez relire le code d'une personne, alors vous 
+                        avez assimilé les connaissances nécessaires. Surtout qu'il y a plusieurs réponses possibles pour un exercice, qui vous 
+                        permettront en les corrigeant, de vous donner une nouvelle vision. 
                     </article>
                 </section>
             </div>
@@ -82,21 +90,22 @@
                 <section class="container-section-articles">
                     <div class="second-title">👨‍🏫<h2>Cours</h2>👨‍🏫</div>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nobis cum culpa dolorum
-                        excepturi? Odit voluptate itaque quia maiores, illo, aliquam quo explicabo assumenda dolor
-                        necessitatibus voluptates, quam officia deserunt?
+                        En ayant le planning de la semaine, vous savez quels sont les cours qui vont y être abordés. Il est important, on le répète, 
+                        de bien faire les quêtes AVANT (dans la mesure du possible évidemment).</br>
+                        Les cours sont collectifs et participatifs. Les formateurs/formatrices sont très pros, à l'écoute et n'hésitent pas à apporter 
+                        des compléments avec leurs propres expériences ; du coup on n'a pas cet aspect descendant comme au lycée ou à la fac.
                     </article>
                     <div class="second-title">👩‍💻<h2>Live Coding</h2>👩‍💻</div>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ullam expedita quam aspernatur
-                        odio, at perferendis illo quae distinctio fuga ea reiciendis officiis minus aperiam incidunt
-                        saepe sed. Eum, ad!
+                        Le live coding c'est un peu comme des cours de soutient. Tu revois des notions en groupe et avec ton/ta formateur/formatrice 
+                        qui partage sa cession et son IDE pour pouvoir coder ensemble et te donner des tips.
                     </article>
                     <div class="second-title">⚗️<h2>Workshop</h2>⚗️</div>
                     <article>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam earum obcaecati aut eaque
-                        natus ex, accusamus tempora saepe officia neque rem? Aspernatur rerum exercitationem quis error
-                        illo soluta cupiditate.
+                        Le Workshop c'est l'exercice donné après le cours, afin de mettre en pratique tout de suite ce que tu viens d'apprendre avec 
+                        un temps imparti. Tu peux le faire seul ou en groupe. Une fois le temps écoulé on se retrouve tous sur le meet pour une correction 
+                        collective.</br>
+                        Il n'y a pas de secret, il faut coder, coder, coder!!
                     </article>
                 </section>
                 <img src="images/live-coding-img.png" class="section-img">
@@ -106,78 +115,89 @@
                 <section class="container-section-articles">
                     <div class="second-title">🏗️<h2>Projet</h2>🏗️</div>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nobis cum culpa dolorum
-                        excepturi? Odit voluptate itaque quia maiores, illo, aliquam quo explicabo assumenda dolor
-                        necessitatibus voluptates, quam officia deserunt?
+                        Tout au long de ta formation, tu auras à réaliser 3 projets. Les projets se font en groupe et te permettront d'étoffer 
+                        ton portfolio (c'est donc super important!), surtout que le dernier sera donné par un vrai client!!</br>
+                        C'est un vrai challenge car il faut pouvoir s'organiser, déléguer, dialoguer, s'armoniser et respecter la deadline 
+                        imposée avec ton équipe.</br>
+                        A la fin de ton projet, tu le présente avec ton groupe et fais une démo de ton site/application.
                     </article>
                     <div class="second-title">👘<h2>Dojo</h2>👘</div>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ullam expedita quam aspernatur
-                        odio, at perferendis illo quae distinctio fuga ea reiciendis officiis minus aperiam incidunt
-                        saepe sed. Eum, ad!
+                        Le Dojo (non tu ne vas pas pratiquer d'art martial rassure toi), est un défi de programmation en petit groupe.</br>
+                        Vous allez partager un IDE commun et coder à tour de rôle, comme dans un relai, avec un capitaine (celui qui code) et un co-pilote 
+                        (celui qui donne des consignes) qui changeront toutes les 3 à 5 minutes.</br>
+                        Les autres doivent attendre leur tour et ne peuvent intervenir d'ici là.</br>
+                        Cet exercice n'est pas simple mais permet de mieux t'exprirmer et de mettre des mots sur ton code pour faciliter 
+                        sa compréhension.
                     </article>
                     <div class="second-title">🧠<h2>Hackaton</h2>🧠</div>
                     <article>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam earum obcaecati aut eaque
-                        natus ex, accusamus tempora saepe officia neque rem? Aspernatur rerum exercitationem quis error
-                        illo soluta cupiditate.
+                        Contraction de "hack" et "marathon", un hackathon est un événement lors duquel des équipes doivent développer un projet informatique. 
+                        Elles doivent le faire sur une période limitée, et généralement courte (une journée, une nuit, un week-end).</br>
+                        Le but est donc de coder rapidement quelque chose de malin.</br>
+                        Il s'agit aussi de développer de manière intensive, sans s'arrêter dans un contexte d'émulation mais aussi de camaraderie.
                     </article>
                 </section>
             </div>
         </div>
     </body>
     <footer>
-        <p>
-            Les wilders ayant participé à ce projet :
-        </p>
         <div class="container-footer">
             <div class="wilder-reseaux">
-                <p>
-                    <img src="icones/fatima-img.png" alt="Photo de Fatima" class="icone" />
+                <div class="wilder-reseaux-container-icones">
                     <a href="https://aitkhelifa.fatima59@gmail.com" target="_blank">
                         <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
                     <a href="https://github.com/fatimaatk" target="_blank">
                         <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
                     <a href="https://www.linkedin.com/in/fatima-ait-khelifa-4ab840215/" target="_blank">
                         <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
-                </p>
+                </div>
+                <h4>FATIMA AIT KHELIFA</h4>
             </div>
             <div class="wilder-reseaux">
-                <p>
-                    <img src="icones/gio-img.png" alt="Photo de giovanni" class="icone" />
-                    <a href="https://giovanni.rossi.web@gmail.com" target="_blank">
+                <div class="wilder-reseaux-container-icones">
+                    <a href="https://kevinbruno90@gmail.com" target="_blank">
                         <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
-                    <a href="https://github.com/eths09" target="_blank">
+                    <a href="https://github.com/KvnBrn" target="_blank">
                         <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
-                    <a href="https://www.linkedin.com/in/gio-rossi-4b0b98221/" target="_blank">
+                    <a href="https://www.linkedin.com/in/kevin-bruno-983a6417b/" target="_blank">
                         <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
-                </p>
-
+                </div>
+                <h4>KEVIN BRUNO</h4>
             </div>
             <div class="wilder-reseaux">
-                <p>
-                    <img src="icones/thomas-img.png" alt="Photo de Thomas" class="icone" />
+                <div class="wilder-reseaux-container-icones">
                     <a href="https://thomasfran1935@gmail.com" target="_blank">
                         <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
                     <a href="https://github.com/ThomasFr45" target="_blank">
                         <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
                     <a href="https://www.linkedin.com/in/thomas-fran%C3%A7ois-bba91a221/" target="_blank">
                         <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
-                </p>
+                </div>
+                <h4>THOMAS FRANÇOIS</h4>
             </div>
             <div class="wilder-reseaux">
-                <p>
-                    <img src="icones/kevin-img.png" alt="Photo de Kévin" class="icone" />
-                    <a href="https://kevinbruno90@gmail.com" target="_blank">
+                <div class="wilder-reseaux-container-icones">
+                    <a href="https://giovanni.rossi.web@gmail.com" target="_blank">
                         <img src="icones/logo-mail.png" alt="Icone Mail" class="icone" /></a>
-                    <a href="https://https://github.com/KvnBrn" target="_blank">
+                    <a href="https://github.com/eths09" target="_blank">
                         <img src="icones/logo-github.png" alt="Icone Github" class="icone" /></a>
-                    <a href="https://www.linkedin.com/in/kevin-bruno-983a6417b/ " target="_blank">
+                    <a href="https://www.linkedin.com/in/gio-rossi-4b0b98221/" target="_blank">
                         <img src="icones/logo-linkedin.png" alt="Icone LinkedIn" class="icone" /></a>
-                </p>
+                </div>
+                <h4>GIOVANNI ROSSI</h4>
             </div>
         </div>
-    </footer>
+        <div class="text-footer">
+            <p>Wilders ayant participé à l'élaboration de ce projet
+                </br>
+                Site internet créé dans le cadre d'un projet de la formation DEVELOPPEUR WEB et WEB MOBILE promo
+                2021-2022
+                </br>
+                Tous droits réservés à la WildCodeSchool
+            </p>
+        </div>
 </div>
+</footer>
 
 </html>
