--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
              <img src="images/image_banniere.png" alt="Bannière" id="banniere-img" />
          </div>
          <div class="main-title">
-            <h1 class="h1index">WELCOME</h1>
+            <h1 class="h1index">BIENVENUE</h1>
             <h1> <a href="https://www.wildcodeschool.com/fr-FR" target="_blank" class="h1-second-index"> REJOINS NOUS</a></h1>
          </div>
          <body>
