--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
              <div class="container-main-body">
                  <div class="articles">
                     <div class="divArticle"><img src="images/image_quisommesnous.jpg" class="image-remote">
-                        <h2 class="h2index">Qui sommes-nous ?</h2> <br/>
+                        <h2 class="h2index">Qui sommes-nous ?</h2>
                         <p>          Nous sommes quatre étudiants en formation </br> Developpeur Web et Web Mobile à la wildcodeschool.</br>
                             Notre team est composée de profils très différents mais tout aussi complémentaires. </br> </br>
                             Kevin vient d'Amiens et est
