--- a/cursus.html
+++ b/cursus.html
@@ -33,20 +33,20 @@
         <div class="container-main-body">
             <div class="articleDiv">
                 <div id="flex-container1">
-                    <article class="articleCursus">Langages travaillés : <br />
+                    <article class="articleCursus"><h2 class="h2index">Langages travaillés :</h2><br />
                         Pendant votre formation, vous approfondirez vos connaissances en HTML et CSS, mais vous
                         apprendrez aussi les bases de JavaScript ainsi que PHP ! <br />
                         Après vos deux premières semaines, on vous demandera de choisir le langage avec lequel vous
                         souhaitez perfectionner au cours de la formation, qu'allez vous choisir ?</article>
                 </div>
                 <div id="flex-container2">
-                    <article class="articleCursus">Workshops : <br />
+                    <article class="articleCursus"><h2 class="h2index">Workshops :</h2><br />
                         Au cours de la formation, différents ateliers seront mis en place, ces derniers peuvent se dérouler seul ou en groupe. <br/> 
                         Ces ateliers vous permettront d'appliquer certaines notions vu lors des cours, mais aussi de vous familiariser avec certaines erreurs, afin de les éviter, ou de savoir les réparer. <br/> 
                         Notez qu'il est possible de les refaire à n'importe quel moment !</article>
                 </div>
                 <div id="flex-container1">
-                    <article class="articleCursus">Quêtes : <br />
+                    <article class="articleCursus"><h2 class="h2index">Quêtes :</h2><br />
                         Les quêtes représentent une grosse partie du cursus, vous en aurez des nouvelles toutes les
                         semaines. <br />
                         Ces dernières, vous permettront de voir certaines notions, et de les mettre en pratique (du
@@ -55,7 +55,7 @@
                         sérieusement !</article>
                 </div>
                 <div id="flex-container2">
-                    <article class="articleCursus">Projets : <br />
+                    <article class="articleCursus"><h2 class="h2index">Projets :</h2><br />
                         Entre vos cours, workshops et vos quêtes, on vous demandera de réaliser des projets. <br />
                         Ces derniers se réaliseront en groupes, afin de vous permettre d'apprendre les un des autres, et surtout de vous familiariser avec les outils de développeur. <br/>
                         Vous devrez passer par différentes étapes : La création de maquettes (Figma peut être utile pour cela), la réalisation des parties communes à vos pages ( NavBar, banniere s'il y a, footer, ... ), et enfin le contenue de vos pages.
@@ -64,7 +64,7 @@
                     </article>
                 </div>
                 <div id="flex-container1">
-                    <article class="articleCursus">Attentes : <br />
+                    <article class="articleCursus"><h2 class="h2index">Attentes :</h2><br />
                         Et oui, la Wild Code School, ce n'est pas une promenade, on attend beaucoup de vous ! <br />
                         Voici une petite idée de ce qui vous attends si vous choisissez de continuer le JavaScript :
                         <br />
