--- a/bien_se_preparer.html
+++ b/bien_se_preparer.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bien se préparer</title>
     <link rel="stylesheet" href="bien_se_preparer.css">
-    <link rel="stylesheet" href="semaine-type.css">
+    <link rel="stylesheet" href="prototype.css">
     <nav class="sidebar">
         <ul>
             <li><a href="index.html">ACCUEIL</a></li>
@@ -26,35 +26,54 @@
         <div class="banniere">
             <img src="images/image_banniere.png" alt="Bannière" id="banniere-img" />
         </div>
-
+        <div class="main-title">
+            <h1>Bien se préparer</h1>
+        </div>
         <ul>
             <div class="cadreli">
                 <img src="./img/imgTypeDeMachines.png" class="imgLeft">
-                <li class="liarticle">types de machines</li>
-                <p>Avant de commencer à cuisiner, il est important d'avoir les bons ustensiles.<br/> Que vous soyez sur Mac ou sur Pc, ce qui compte le plus pour un départ idéal<br/> c'est le système d'exploitation. On vous conseille donc fortement d'installer
-                    Ubuntu avant la formation,<br/> et de vous habituer à l'interface. Voici un lien qui vous aidera à passer votre ordinateur sous Ubuntu <br/> <a href="https://www.numetopia.fr/comment-creer-une-cle-usb-bootable-sous-ubuntu/">je veux passer sous ubuntu</a>                    </p>
+                <li class="liarticle">Types de machines</li>
+                <p>
+                    Avant de commencer à cuisiner, il est important d'avoir les bons ustensiles.<br/><br/>
+                    Que vous soyez sur Mac ou sur Pc, ce qui compte le plus pour un départ idéal c'est le système d'exploitation.<br/><br/>
+                    On vous conseille donc fortement d'installer Ubuntu avant la formation, et de vous habituer à l'interface.<br/><br/>
+                    Voici un lien qui vous aidera à passer votre ordinateur sous Ubuntu : <br/> <a href="https://www.numetopia.fr/comment-creer-une-cle-usb-bootable-sous-ubuntu/">Je veux passer sous ubuntu</a>
+                </p>
             </div>
             <div class="cadreli">
                 <img src="./img/people.png" class="imgRight">
                 <li class="liarticle">Installations</li>
-                <p>Tout d'abord de bons ingrédients : <br/> <br/> -visual studio code <br/> <br/> et comme c'est plus amusant de cuisiner à plusieurs : <br/> <br/>- Discord- <br/> -Slack- <br/> -Google Meet-
+                <p>
+                    Tout d'abord, regardons la liste des ingrédients :<br/> <br/>
+                    -Visual Studio code <br/> <br/> 
+                    et comme c'est plus amusant de cuisiner à plusieurs : <br/> <br/>
+                    -Discord-<br/>
+                    -Slack-<br/>
+                    -Google Meet-
+                </p>
             </div>
             <div class="cadreli">
                 <img src="./img/recette.png" class="imgLeft">
                 <li class="liarticle">Quêtes de préparation</lI>
-                <p> Vous voulez être sûr que le métier vous plaît et apprendre quelques recettes de base avant de faire le grand saut . Alors la Wild a mis en place un programme spécialement pour vous => <a href="https://www.wildcodeschool.com/fr-FR/formations/formation-developpeur-web-gratuit"> on essaye : D </a></p>
+                <p> <br/>Vous voulez être sûr que le métier vous plaît et apprendre quelques recettes de base avant de faire le grand saut ?<br/><br/>
+                    Alors la Wild a mis en place un programme spécialement pour vous => <a href="https://www.wildcodeschool.com/fr-FR/formations/formation-developpeur-web-gratuit"> on essaye : D </a>
+                </p>
             </div>
             <div class="cadreli">
                 <img src="./img/code.png" class="imgRight">
                 <li class="liarticle">Savoir faire</li>
-                <p> Tous les apprentis cuisiniers utilisent html et css en commun.<br/> Par la suite ils choisissent d'utiliser PHP ou Javascript <br/> Je vous rassure, que vous ayez choisi l'un ou l'autre, vous serez capable de préparer de super plats.<br/>                    On vous conseille donc de vous renseigner à l'avance pour avoir une idée de ce qu'il vous plaît le plus.<br/> Vous pourrez rapidement essayer les deux languages au début de la formation.</p>
+                <p> Tous les apprentis cuisiniers utilisent html et css en commun.<br/><br/>
+                    Par la suite ils choisissent d'utiliser PHP ou Javascript <br/> Je vous rassure, que vous ayez choisi l'un ou l'autre, vous serez capable de préparer de super plats.<br/><br/>
+                    On vous conseille donc de vous renseigner à l'avance pour avoir une idée de ce qu'il vous plaît le plus.<br/> Vous pourrez rapidement essayer les deux languages au début de la formation.</p>
             </div>
             <div class="cadreli">
                 <img src="./img/goodVibes.png" class="imgsavoiretre" id="goodVibes">
                 <li class="liarticle">Savoir être</li>
-                <p>Les "soft skills" sont l'ensemble des aptitudes et compétences qui ne sont pas techniques et qui nous permettent d'évoluer dans la vie, personnelle comme professionnelle. <br/> <br/> -les traits de personnalités, innés (introversion, extraversion,
-                    optimisme...)
-                    <br/> -les états émotionnels (enthousiasme, conscience de soi, empathie...)<br/> -les compétences qu'on peut acquérir et améliorer (sens de la communication, élocution, sens de l'écoute, esprit d'équipe...).
+                <p>Les "soft skills" sont l'ensemble des aptitudes et compétences qui ne sont pas techniques et qui nous permettent d'évoluer dans la vie, personnelle comme professionnelle. <br/> <br/>
+                    -Les traits de personnalités, innés (introversion, extraversion,
+                    optimisme...)<br/><br/>
+                    -Les états émotionnels (enthousiasme, conscience de soi, empathie...)<br/><br/>
+                    -Les compétences qu'on peut acquérir et améliorer (sens de la communication, élocution, sens de l'écoute, esprit d'équipe...).
                 </p>
             </div>
         </ul>
