--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
                             Que ce soit dans le cadre d'une reconversion professionnelle ou bien d'une continuité d'études, nous avons
                             tous les quatres fait le choix d'intégrer l'école de la WILDCODESCHOOL.</p></div>
                     <div class="divArticle"><img src="images/wild-ecole-image.jpeg" class="image-remote">
-                        <h2 class="h2index">Pourquoi rejoindre la wild ?</h2> <br/>
+                        <h2 class="h2index">Pourquoi rejoindre la wild ?</h2>
                         <p>La WILDCODESCHOOL c'est : <br /><br />
                             - plus de 2000 anciens élèves,<br /><br />
                             - 3 spécialités (développement web, analyse de la data, cybersécurité)<br /><br />
                             - + 20 campus en Europe<br /><br />
                             - un taux de 84% d’insertion professionnelle.<br />
                             <br /><br />
-                            À la WILDCODESCHOOL, tu te retrouveras d'abord face aux problèmes et on t'expliquera ensuite la solution. Un
+                            À la WILDCODESCHOOL, tu te retrouveras d'abord face aux problèmes et on t'expliquera ensuite la solution. </br>Un
                             peu comme une sorte d'escape Game éducatif, pas mal non ? <br /><br />
                             L'objectif est de te familiariser rapidement avec le langage choisi et de trouver par toi même la solution au
-                            problème. La montée en compétence se fera au gré des quêtes.<br /><br />
-                            Les cours sont interactifs. Live codding et workshop te permettront de découvrir pas à pas le langage et
+                            problème.</br> La montée en compétence se fera au gré des quêtes.<br /><br />
+                            Les cours sont interactifs.</br> Live codding et workshop te permettront de découvrir pas à pas le langage et
                             d'apprendre en pratiquant.
                   
                   
                   </p></div>
                     <div class="divArticle"><img src="images/image_remote.jpg" class="image-remote">
-                        <h2 class="h2index">Apprendre à développer en remote c'est possible ?</h2><br/>
-                        <p>          La réponse est OUI.
+                        <h2 class="h2index">Apprendre à développer en remote</h2>
+                        <p>C'est possible ? La réponse est OUI.
                         </br></br> Pour cette rentrée, notre promotion est constituée de 60 élèves venus de toute la France et meme
                         d'ailleurs. </br>Londres, Bruxelles et même Madagascar ont rejoint la session de Developpeur Web et Web Mobile
                         en remote.
@@ -76,8 +76,8 @@
                         A l'ere de l'ultra-digitalisation, nous travaillons ensemble et intéragissons avec des outils en ligne.
                         </br></br>Des meet-up sont organisés chaque matin afin de nous permettre d'échanger sur l'avancée de notre
                         formation. </br></br> La journée quant à elle, est rythmée par des cours communs en visio.</br></br> Nous
-                        montons chaque jour en compétence ensemble. Si tu veux en savoir plus, n'hésite pas à visiter </br>notre page
-                        dédiée sur le sujet : </br>une semaine type dans la peau d'un wilder en Remote.</p></div>
+                        montons chaque jour en compétence ensemble.</br> Si tu veux en savoir plus, n'hésite pas à visiter notre page
+                        dédiée sur le sujet : </br></br>Une semaine type dans la peau d'un wilder en Remote.</p></div>
                  </div>
              </div>
          </body>
