--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="prototype.css">
     <link rel="stylesheet" href="contact.css">
-    <title>Semaine Type à la Wild</title>
+    <title>Contact</title>
     <nav class="sidebar">
         <ul id="plopBar">
             <li><a href="index.html">ACCUEIL</a></li>
@@ -126,6 +126,7 @@
         </div>
         <script src="caroussel.js"></script>
         <script src="contact.js"></script>
+    </div>
     </body>
 
 </html>
