--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <br/><br/>
                             Fatima, elle, est Lilloise. Elle est diplomée d'une licence en Management et a
                             travaillé pendant plusieurs années dans le domaine du réseau et des télécommunications.
-                            </br></br>Notre team est également composée de Thomas. Il poursuit ses études dans le numérique après avoir fait une formation en C.
+                            </br></br>Notre team est également composée de Thomas qui réside dans le Loiret. Il poursuit ses études dans le numérique après avoir fait une formation en C.
                             </br></br>
                             Que ce soit dans le cadre d'une reconversion professionnelle ou bien d'une continuité d'études, nous avons
                             tous les quatres fait le choix d'intégrer l'école de la WILDCODESCHOOL.</p></div>
